# panduza-cxx-platform

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  compile.sh  docker-compose.yml  image.sh  ppaperwork.yml  start-platform.sh  start.sh
.devcontainer/: devcontainer.json
.github/workflows/: docker-image-tag.yml  docker-image.yml
BoundaryScan/: xc7s50_csga324.bsd
cmake/: dependencies.cmake
documentation/: README.md  doxygen-documentation.html
documentation/logs/: doxygen.txt
mosquitto-data/: mosquitto.conf
panduza/: tree.json  tree.json.old  zoejziehtre
src/: main.cxx  meta_driver.cxx  meta_driver.hxx  meta_platform.cxx  meta_platform.hxx
src/base64/: base64.cxx
src/loguru/: loguru.cxx
src/meta_drivers/: meta_driver_FT2232_boundary_scan.cxx  meta_driver_FT2232_boundary_scan.hxx  meta_driver_FT2232_bsdl_loader.cxx  meta_driver_FT2232_bsdl_loader.hxx  meta_driver_FT2232_file.cxx  meta_driver_FT2232_file.hxx  meta_driver_FT2232_io.cxx  meta_driver_FT2232_io.hxx  meta_driver_file_fake.cxx  meta_driver_file_fake.hxx  meta_driver_group_info.cxx  meta_driver_group_info.hxx  meta_driver_io_fake.cxx  meta_driver_io_fake.hxx  meta_driver_psu_fake.cxx  meta_driver_psu_fake.hxx
src/meta_drivers/ft2232_boundary_scan/: io.cxx  io.hxx  jtag_manager.cxx  jtag_manager.hxx
src/meta_drivers/ft2232_boundary_scan/bsdl_parser/: bsdl_loader.cxx  bsdl_strings.cxx
src/meta_drivers/ft2232_boundary_scan/drivers/: drv_loader.cxx  drv_loader.hxx
src/meta_drivers/ft2232_boundary_scan/drivers/ftdi_jtag/: ftdi_jtag_drv.cxx
src/meta_drivers/ft2232_boundary_scan/drivers/ftdi_jtag/ftdi/: ftd2xx.hxx
src/meta_drivers/ft2232_boundary_scan/jtag_core/: jtag_core.cxx  jtag_core.hxx  script.cxx
src/plugins/: PLUGIN.md  entrypoint.hxx
